# cookiecutter-orion.algo

./: .travis.yml  LICENSE  README.rst  cookiecutter.json  requirements.txt  test.sh  tox.ini
.github/workflows/: build.yml
hooks/: post_gen_project.py
orion.algo.{{cookiecutter.plugin_name}}/: .pylintrc  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
orion.algo.{{cookiecutter.plugin_name}}/.github/workflows/: build.yml  release-drafter.yml
orion.algo.{{cookiecutter.plugin_name}}/doc/src/: conf.py  index.rst
orion.algo.{{cookiecutter.plugin_name}}/docs/: requirements.txt
orion.algo.{{cookiecutter.plugin_name}}/docs/src/: conf.py
orion.algo.{{cookiecutter.plugin_name}}/scripts/: setup_gh.sh
orion.algo.{{cookiecutter.plugin_name}}/src/orion/algo/{{cookiecutter.plugin_name}}/: __init__.py  {{cookiecutter.algo_module_name}}.py
orion.algo.{{cookiecutter.plugin_name}}/test/benchmark/: {{cookiecutter.algo_module_name}}.yaml
orion.algo.{{cookiecutter.plugin_name}}/tests/: integration_test.py  requirements.txt
orion.algo.{{cookiecutter.plugin_name}}/tests/benchmark/: main.py  {{cookiecutter.algo_name|lower}}.yaml
tests/: test_template.py
