[versioneer]
VCS=git
style=pep440-post
versionfile_source=src/orion/algo/{{ cookiecutter.plugin_name }}/_version.py
versionfile_build=orion/algo/{{ cookiecutter.plugin_name }}/_version.py
tag_prefix=
parentdir_prefix=orion.algo.{{ cookiecutter.plugin_name }}-

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_file=LICENSE
